--- a/app/src/main/res/layout-land/activity_hotel.xml
+++ b/app/src/main/res/layout-land/activity_hotel.xml
@@ -9,20 +9,23 @@
 
     <ImageView
         android:id="@+id/image_hotel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:contentDescription="@string/hotel_picture_desc"
-        android:elevation="8dp"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_photo_height"
+        android:elevation="24dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/guideline7"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/backgrounds/scenic[19]" />
+        tools:src="@tools:sample/backgrounds/scenic[19]"
+        android:contentDescription="@string/hotel_picture_desc" />
 
     <LinearLayout
         android:id="@+id/layout_hotel_address"
         style="@style/TextHotelInfoBackground"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/layout_hotel_stars">
 
         <ImageView
@@ -40,8 +43,10 @@
     <LinearLayout
         android:id="@+id/layout_hotel_stars"
         style="@style/TextHotelInfoBackground"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_photo_height">
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/guideline7">
 
         <RatingBar
             android:id="@+id/rating_hotel_stars"
@@ -50,13 +55,14 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:rating="5" />
-
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout_hotel_distance"
         style="@style/TextHotelInfoBackground"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/layout_hotel_address">
 
         <ImageView
@@ -74,13 +80,16 @@
     <LinearLayout
         android:id="@+id/layout_hotel_suites"
         style="@style/TextHotelInfoBackground"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@id/layout_hotel_distance">
 
         <ImageView
             style="@style/ImageHotelInfo"
-            android:contentDescription="@string/key_pic_desc"
-            android:src="@drawable/baseline_vpn_key_black_24" />
+            android:src="@drawable/baseline_vpn_key_black_24"
+            android:contentDescription="@string/key_pic_desc" />
 
         <TextView
             android:id="@+id/text_hotel_suites"
@@ -92,13 +101,15 @@
     <LinearLayout
         android:id="@+id/layout_hotel_lat"
         style="@style/TextHotelInfoBackground"
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layout_hotel_suites">
 
         <ImageView
             style="@style/ImageHotelInfo"
-            android:contentDescription="@string/place_pic_desc"
-            android:src="@drawable/baseline_place_black_24" />
+            android:src="@drawable/baseline_place_black_24"
+            android:contentDescription="@string/place_pic_desc" />
 
         <TextView
             android:id="@+id/text_hotel_coordinates"
@@ -110,14 +121,16 @@
 
     <TextView
         android:id="@+id/text_hotel_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:elevation="16dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="32dp"
         android:text="@string/hotel_name_placeholder"
-        android:textColor="@color/colorActionBarText"
-        android:textSize="@dimen/bigTextSize"
+        android:textColor="#fff"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="@id/image_hotel"
+        app:layout_constraintEnd_toEndOf="@+id/image_hotel"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
@@ -127,16 +140,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout style="@style/Toolbar.LinearLayout">
+        <LinearLayout
+            style="@style/Toolbar.LinearLayout">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="?android:selectableItemBackground"
-                android:contentDescription="@string/arrow_back_desc"
+                android:clickable="true"
+                android:focusable="true"
                 android:onClick="onBackBtnClick"
-                android:src="@drawable/outline_arrow_back_white_36" />
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/outline_arrow_back_white_36"
+                android:background="?android:selectableItemBackground"
+                android:contentDescription="@string/arrow_back_desc" />
 
         </LinearLayout>
 
@@ -157,9 +173,16 @@
         app:layout_constraintGuide_begin="42dp" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_photo_height"
+        android:id="@+id/guideline7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.33" />
+        app:layout_constraintGuide_percent="0.55" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
