--- a/app/src/main/res/layout-large/activity_hotel.xml
+++ b/app/src/main/res/layout-large/activity_hotel.xml
@@ -11,13 +11,13 @@
         android:id="@+id/image_hotel"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:contentDescription="@string/hotel_picture_desc"
         android:elevation="8dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_photo_height"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/backgrounds/scenic[19]" />
+        tools:src="@tools:sample/backgrounds/scenic[19]"
+        android:contentDescription="@string/hotel_picture_desc" />
 
     <LinearLayout
         android:id="@+id/layout_hotel_address"
@@ -28,11 +28,11 @@
         <ImageView
             style="@style/ImageHotelInfo"
             android:contentDescription="@string/home_pic_desc"
-            android:src="@drawable/baseline_home_black_24" />
+            android:src="@drawable/baseline_home_black_48" />
 
         <TextView
             android:id="@+id/text_hotel_address"
-            style="@style/HotelCard.Text"
+            style="@style/HotelCard.Text.Large"
             android:padding="8dp"
             android:text="@string/hotel_address_placeholder" />
     </LinearLayout>
@@ -41,32 +41,31 @@
         android:id="@+id/layout_hotel_stars"
         style="@style/TextHotelInfoBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_photo_height">
+        app:layout_constraintTop_toTopOf="@+id/guideline5">
 
         <RatingBar
             android:id="@+id/rating_hotel_stars"
-            style="@style/RatingBar"
+            style="@style/RatingBar.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:layout_marginStart="8dp"
             android:rating="5" />
-
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout_hotel_distance"
         style="@style/TextHotelInfoBackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_hotel_address">
+        app:layout_constraintTop_toBottomOf="@id/layout_hotel_address">
 
         <ImageView
             style="@style/ImageHotelInfo"
-            android:contentDescription="@string/direction_pic_desc"
-            android:src="@drawable/baseline_directions_black_24" />
+            android:src="@drawable/baseline_directions_black_48"
+            android:contentDescription="@string/direction_pic_desc" />
 
         <TextView
             android:id="@+id/text_hotel_distance"
-            style="@style/HotelCard.Text.Additional"
+            style="@style/HotelCard.Text.Large"
             android:padding="8dp"
             android:text="@string/hotel_distance_placeholder" />
     </LinearLayout>
@@ -79,12 +78,12 @@
 
         <ImageView
             style="@style/ImageHotelInfo"
-            android:contentDescription="@string/key_pic_desc"
-            android:src="@drawable/baseline_vpn_key_black_24" />
+            android:src="@drawable/baseline_vpn_key_black_48"
+            android:contentDescription="@string/key_pic_desc" />
 
         <TextView
             android:id="@+id/text_hotel_suites"
-            style="@style/HotelCard.Text.Additional"
+            style="@style/HotelCard.Text.Large"
             android:padding="8dp"
             android:text="@string/hotel_suites_placeholder" />
     </LinearLayout>
@@ -97,12 +96,12 @@
 
         <ImageView
             style="@style/ImageHotelInfo"
-            android:contentDescription="@string/place_pic_desc"
-            android:src="@drawable/baseline_place_black_24" />
+            android:src="@drawable/baseline_place_black_48"
+            android:contentDescription="@string/place_pic_desc" />
 
         <TextView
             android:id="@+id/text_hotel_coordinates"
-            style="@style/HotelCard.Text.Additional"
+            style="@style/HotelCard.Text.Large"
             android:padding="8dp"
             android:text="@string/hotel_coordinates_placeholder" />
 
@@ -116,7 +115,7 @@
         android:elevation="16dp"
         android:text="@string/hotel_name_placeholder"
         android:textColor="@color/colorActionBarText"
-        android:textSize="@dimen/bigTextSize"
+        android:textSize="@dimen/bigTextSizeLarge"
         app:layout_constraintBottom_toBottomOf="@id/image_hotel"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -127,16 +126,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout style="@style/Toolbar.LinearLayout">
+        <LinearLayout
+            style="@style/Toolbar.LinearLayout">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="?android:selectableItemBackground"
-                android:contentDescription="@string/arrow_back_desc"
                 android:onClick="onBackBtnClick"
-                android:src="@drawable/outline_arrow_back_white_36" />
+                android:src="@drawable/outline_arrow_back_white_48"
+                android:contentDescription="@string/arrow_back_desc" />
 
         </LinearLayout>
 
@@ -157,7 +157,7 @@
         app:layout_constraintGuide_begin="42dp" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_photo_height"
+        android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
