--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorActionBarText">#ffffff</color>
-    <color name="colorBackground">#10000000</color>
+    <color name="colorDefaultText">#000000</color>
+    <color name="colorSecondaryText">#80000000</color>
+    <color name="colorBackground">#03000000</color>
 </resources>
