--- a/app/src/main/res/layout-large/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout-large/spinner_dropdown_item.xml
@@ -2,7 +2,7 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:textColor="@android:color/black"
-    android:textSize="@dimen/defaultTextSize"
+    android:textSize="@dimen/defaultTextSizeLarge"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
