--- a/app/src/main/res/layout-large/spinner_item.xml
+++ b/app/src/main/res/layout-large/spinner_item.xml
@@ -2,6 +2,6 @@
     android:id="@android:id/text1"
     android:singleLine="true"
     android:textColor="@android:color/black"
-    android:textSize="@dimen/defaultTextSize"
+    android:textSize="@dimen/defaultTextSizeLarge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
